fix story + add section handler + add subject details page (for sound autoplay)
