# web-app/src/views/Section/PageSection/PageSection.ts
@@ -1,9 +1,17 @@
 import { PageModel } from '../../../../../generated-api/index'
+import { SectionHandler } from '../SectionHandler';
 
 export class PageSection {
     public page: PageModel;
 
-    constructor(page: PageModel ) {
-        this.page = page;
+    private _sectionHandler: SectionHandler;
+
+    constructor(sectionHandler: SectionHandler ) {
+        this._sectionHandler = sectionHandler;
+        this.page = sectionHandler.currentSection.page!;
+    }
+
+    public goToSection(sectionId: string) {
+        this._sectionHandler.goToSection(sectionId)
     }
 }
