# web-app/src/views/Section/QuestionsGameSection/QuestionsGameSection.ts
@@ -1,9 +1,13 @@
 import { QuestionsGameModel } from '../../../../../generated-api/index'
+import { SectionHandler } from '../SectionHandler';
 
 export class QuestionsGameSection {
     public questionsGame: QuestionsGameModel;
+    
+    private _sectionHandler: SectionHandler;
 
-    constructor(questionsGame: QuestionsGameModel ) {
-        this.questionsGame = questionsGame;
+    constructor(sectionHandler: SectionHandler ) {
+        this._sectionHandler = sectionHandler;
+        this.questionsGame = sectionHandler.currentSection.questions_game!;
     }
 }
